--- a/mathematics/applied/electrical-engineering/combinational-logic/decoder-3-8/decoder-3-8.tex
+++ b/mathematics/applied/electrical-engineering/combinational-logic/decoder-3-8/decoder-3-8.tex
@@ -3,11 +3,11 @@
 \usetikzlibrary{arrows, shapes.gates.logic.US, shapes.gates.logic.IEC, calc}
 
 \tikzset{
-    my3to8/.style={
+    decode3to8/.style={
         muxdemux, muxdemux def={
-            Lh=8, Rh=8, w=6,  % both left and right size =8 units, wide top
-            NT=0,             % none top
-            NB=0,             % none bottom
+            Lh=8, Rh=8, w=6,  % Size
+            NT=0,             % None top
+            NB=0,             % None bottom
             NL=1,             % 1 pins on the left
             NR=8,             % 8 pins on the right
         },
@@ -21,7 +21,7 @@
 
     \begin{circuitikz}[scale=1.0, transform shape]
         
-        \node[my3to8]                         (DECODE)   at (0,0)                                {};
+        \node[decode3to8]                     (DECODE)   at (0,0)                                {};
         %LEFT
         \node[right, font=\tiny\ttfamily]     (DIN0)    at ($(DECODE.blpin 1) + (0, 0)$)     {\normalsize $[2\:0]in$};
         \coordinate[]                         (IN0)     at ($(DECODE.blpin 1) + (-1, 0)$)    {};
